--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,6 +39,7 @@ html {
 #slideimg {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .overlay {
@@ -414,6 +415,7 @@ p2 {
     html,body{
         overflow-x: hidden;
     }
+}
 @media only screen and (max-width: 540px){ 
    .wrapper{
        flex-wrap: wrap;
@@ -421,6 +423,7 @@ p2 {
     .title.text{
         font-weight: bold;
     }
+}
 @media screen and (min-width: 992px) {
     .navbar {
         background: transparent;
