--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -63,10 +63,11 @@ footer{
     font-size: large;
 }
 .ftr .ftr-links a{
-    display: inline-block;
+    display: inline;
     line-height: 1.8;
     text-decoration: none;
     color: inherit;
+    font-size: auto;
 }
 .ftr .ftr-company-name{
     color: #8f9296;
